--- a/View/appsettings.json
+++ b/View/appsettings.json
@@ -8,6 +8,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "server=localhost; port=3306; database=db; user=root; password=toor; Persist Security Info=False; Connect Timeout=300"
+        "DefaultConnection": "server=localhost; port=3306; database=template_blazor_mysql; user=root; password=toor; Persist Security Info=False; Connect Timeout=300"
     }
 }
